objects/WT_Customer_Verification_Log__c.object
<CustomObject>
    <fields>
        <fullName>WT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Verification Log</relationshipLabel>
        <relationshipName>Customer_Verification_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Customer_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WT_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>WT_Verification_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Verification Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Verification_Method__c</fullName>
        <label>Verification Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Verification Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Center Customer Verification Log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Verification Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>